--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -8,13 +8,13 @@
     <link href="css/index.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title> HHU - What else</title>
+    <title> HHU </title>
 
 </head>
 
 <body style="background-color: lightblue;">
 
-<!-- Navigation ----------------------------------------->
+<!-- Navigation ---------------------------------------->
 <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light">
   <div class="container">
     <div class="col">
@@ -53,7 +53,7 @@
   </div>
 </nav>
 
-<!------------ Statisches Bild ------------------------------->
+<!---------- Statisches Bild ---------------------------->
 <img class="img-fluid center" src="img/wow.jpg" alt="dummy">
 <br/>
 <br/>
@@ -95,7 +95,7 @@
       </div>
     </div>
 
-<!---------  4     -->
+<!--------  4     -->
           <div class="col-12 p-lg-5 justify-content-center">
             <div class="container w-50 text-center">
               <p>Heinrich Heine Universität</p>
@@ -118,7 +118,7 @@
             </div>
           </div>
 
-<!-------------  5     -->
+<!------------  5     -->
           <div class="col-12">
                           <img src="img/61.jpg" alt="dummy" style="margin-top: 15px; width: inherit; height: auto;">
                       </div>
